--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,7 @@ spring:
 
   jpa:
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    open-in-view: false
     hibernate:
       ddl-auto: create
       use-new-id-generator-mappings: false
