--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,13 +6,13 @@ spring:
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/recordary?serverTimezone=UTC
-    username: recordary-admin
-    password: recordary
+    username: root
+    password: 111111
 
   jpa:
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
       use-new-id-generator-mappings: false
 
 server:
