--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'org.springframework.boot' version '2.2.4.RELEASE'
     id 'io.spring.dependency-management' version '1.0.9.RELEASE'
     id 'java'
+    id "com.moowork.node" version "1.3.1"
 }
 
 group = 'com.fairy_pitt'
@@ -39,3 +40,31 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+// ---- React build Task
+
+apply plugin: "com.moowork.node"
+
+def webappDir = "$projectDir/frontend"
+
+//task deleteBuild(type: Delete) {
+//    delete 'build/resources/main/static'
+//    delete 'build/resources/main/templates'
+//}
+
+task appNpmInstall(type: NpmTask) {
+    workingDir = file("${webappDir}")
+    args = ["run", "build"] }
+task copyStaticApp(type: Copy) {
+    from 'frontend/build'
+    into "build/resources/main/static"}
+task copyHtmlApp(type: Copy) {
+    from 'build/resources/main/static/index.html'
+    into "build/resources/main/templates"}
+
+copyStaticApp.dependsOn(appNpmInstall)
+compileJava.dependsOn(copyStaticApp)
+compileJava.dependsOn(copyHtmlApp)
+//compileJava.dependsOn(deleteBuild)
+
+// ---- React build Task
