--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,9 +5,9 @@ spring:
 
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/recordary?serverTimezone=UTC
-    username: root
-    password: 111111
+    url: jdbc:mysql://35.223.67.43:3306/recordary?serverTimezone=UTC
+    username: recordary-admin
+    password: recordary
 
   jpa:
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
