--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
 
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://35.223.67.43:3306/recordary?serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/recordary?serverTimezone=UTC
     username: recordary-admin
     password: recordary
 
