--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,7 @@ def webappDir = "$projectDir/frontend"
 
 task appNpmInstall(type: NpmTask) {
     workingDir = file("${webappDir}")
-    args = ["run", "build"] }
+    args = ["run-script", "build"] }
 task copyStaticApp(type: Copy) {
     from 'frontend/build'
     into "build/resources/main/static"}
