Revert "Merge branch 'sungho' into waterGlasses"
This reverts commit 2536caec3e9422cbb28c90d174f7453d3037b84a, reversing
changes made to 07ca6345b23e9a029936964cc30e320cec385060.

--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,7 @@ def webappDir = "$projectDir/frontend"
 
 task appNpmInstall(type: NpmTask) {
     workingDir = file("${webappDir}")
-    args = ["run-script", "build"] }
+    args = ["run", "build"] }
 task copyStaticApp(type: Copy) {
     from 'frontend/build'
     into "build/resources/main/static"}
