--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-big-calendar": "^0.23.0",
     "react-dom": "^16.12.0",
     "react-file-picker": "0.0.6",
+    "react-image-crop": "^8.5.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "styled-components": "^5.0.1"
