--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,8 +6,8 @@ spring:
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/recordary?serverTimezone=UTC
-    username: root
-    password: 111111
+    username: recordary-admin
+    password: recordary
 
   jpa:
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
