--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^2.4.0",
-    "@material-ui/core": "^4.9.2",
+    "@material-ui/core": "^4.9.3",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.42",
+    "@material-ui/lab": "^4.0.0-alpha.43",
     "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.8.2",
     "@testing-library/jest-dom": "^4.2.4",
@@ -14,11 +14,13 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "cross-env": "^7.0.0",
+    "material-ui-popup-state": "^1.5.3",
     "react": "^16.12.0",
     "react-big-calendar": "^0.23.0",
     "react-dom": "^16.12.0",
     "react-file-picker": "0.0.6",
     "react-image-crop": "^8.5.0",
+    "react-popup": "^0.10.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "styled-components": "^5.0.1"
