--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,11 +3,11 @@ spring:
   profiles:
     active: local
 
-#  datasource:
-#    driverClassName: com.mysql.cj.jdbc.Driver
-#    url: jdbc:mysql://localhost:3306/recordary?serverTimezone=UTC
-#    username: recordary-admin
-#    password: recordary
+  datasource:
+    driverClassName: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/recordary?serverTimezone=UTC
+    username: recordary-admin
+    password: recordary
 
   jpa:
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
