--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,5 +47,6 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "http://://localhost:8080"
+  "homepage": "http://://localhost:8080",
+  "proxy" : "http://localhost:8080"
 }
