--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "cross-env": "^7.0.0",
+    "date-fns": "^2.10.0",
     "material-ui-popup-state": "^1.5.3",
     "react": "^16.13.0",
     "react-big-calendar": "^0.23.0",
