--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/core": "^1.3.8",
     "@date-io/date-fns": "^2.4.0",
     "@material-ui/core": "^4.9.4",
     "@material-ui/icons": "^4.9.1",
