--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "@date-io/core": "^1.3.8",
-    "@date-io/date-fns": "^2.4.0",
+    "@date-io/date-fns": "^1.3.13",
+    "@date-io/dayjs": "^1.3.13",
+    "@date-io/luxon": "^1.3.13",
+    "@date-io/moment": "^1.3.13",
     "@material-ui/core": "^4.9.4",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.44",
@@ -16,7 +19,10 @@
     "axios": "^0.19.2",
     "cross-env": "^7.0.0",
     "date-fns": "^2.10.0",
+    "dayjs": "^1.8.21",
+    "luxon": "^1.22.0",
     "material-ui-popup-state": "^1.5.3",
+    "moment": "^2.24.0",
     "react": "^16.13.0",
     "react-big-calendar": "^0.23.0",
     "react-dom": "^16.13.0",
