--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "moment": "^2.24.0",
     "react": "^16.13.0",
     "react-big-calendar": "^0.23.0",
+    "react-color": "^2.18.0",
     "react-dom": "^16.13.0",
     "react-file-picker": "0.0.6",
     "react-image-crop": "^8.5.0",
