--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,30 @@
-plugins {
-    id 'org.springframework.boot' version '2.2.4.RELEASE'
-    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
-    id 'java'
-    id "com.moowork.node" version "1.3.1"
+buildscript {
+    ext {
+        springBootVersion = '2.1.9.RELEASE'
+        mooworkVersion = '1.2.0'
+    }
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath("com.moowork.gradle:gradle-node-plugin:${mooworkVersion}")
+    }
 }
 
-group = 'com.fairy_pitt'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
+apply plugin: 'java'
+apply plugin: 'eclipse'
+apply plugin: 'application'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
+apply plugin: 'com.moowork.node'
+
+group 'com.fairy_pitt'
+version '1.0-SNAPSHOT'
+
+sourceCompatibility = 1.8
 
 configurations {
     developmentOnly
@@ -24,47 +41,52 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    compileOnly 'org.projectlombok:lombok'
-//    compile 'org.apache.tomcat.embed:tomcat-embed-jasper'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    runtimeOnly 'mysql:mysql-connector-java'
-    annotationProcessor 'org.projectlombok:lombok'
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-    }
+    compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+    compile('org.projectlombok:lombok')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('com.h2database:h2')
+    compile('org.springframework.session:spring-session-jdbc')
+    compile('org.springframework.boot:spring-boot-devtools')
+
+    annotationProcessor ('org.projectlombok:lombok')
+
+    testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('org.projectlombok:lombok')
+
+    testAnnotationProcessor ('org.projectlombok:lombok')
 }
-
-test {
-    useJUnitPlatform()
-}
-
-// ---- React build Task
-
-apply plugin: "com.moowork.node"
 
 def webappDir = "$projectDir/frontend"
 
-//task deleteBuild(type: Delete) {
-//    delete 'build/resources/main/static'
-//    delete 'build/resources/main/templates'
-//}
+node {
+    version = '12.16.1'
+    download=true
+    workDir = file("${project.buildDir}/nodejs")
+    npmWorkDir=file("${project.buildDir}/npm")
+}
 
 task appNpmInstall(type: NpmTask) {
     workingDir = file("${webappDir}")
-    args = ["run-script", "build"] }
-task copyStaticApp(type: Copy) {
+    args = ["install"]
+}
+
+task yarnBuild(type: YarnTask) {
+    workingDir = file("${webappDir}")
+    args = ['build']
+}
+
+task copyWebApp(type: Copy) {
     from 'frontend/build'
-    into "build/resources/main/static"}
+    into 'build/resources/main/static/.'
+}
+
 task copyHtmlApp(type: Copy) {
     from 'build/resources/main/static/index.html'
-    into "build/resources/main/templates"}
+    into 'build/resources/main/templates/.'
+}
 
-copyStaticApp.dependsOn(appNpmInstall)
-compileJava.dependsOn(copyStaticApp)
-compileJava.dependsOn(copyHtmlApp)
-//compileJava.dependsOn(deleteBuild)
-
-// ---- React build Task
+yarnBuild.dependsOn appNpmInstall
+copyWebApp.dependsOn yarnBuild
+compileJava.dependsOn copyWebApp
+compileJava.dependsOn copyHtmlApp
