--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,25 +1,11 @@
 spring:
 
-  profiles:
-    active: local
-
-  datasource:
-    driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/recordary?serverTimezone=UTC
-    username: recordary-admin
-    password: recordary
-
   jpa:
-    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    show-sql: false
+    properties:
+      dialect: org.hibernate.dialect.MySQL5InnoDBDialect
     open-in-view: false
-    hibernate:
-      ddl-auto: update
-      use-new-id-generator-mappings: false
 
-
-server:
-  error:
-    whitelabel:
-      enabled: false
-
-  port: 8080
+  h2:
+    console:
+      enabled: true
