Group관련 Dto 구조 수정 완료
Front랑 맞추면서 수정할 부분 생길 수 있음

Test코드 작성 해봐야함

--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     compile('com.h2database:h2')
     compile('org.springframework.session:spring-session-jdbc')
     compile('org.springframework.boot:spring-boot-devtools')
+    compile ('net.sf.json-lib:json-lib:2.4:jdk15')
 
     annotationProcessor ('org.projectlombok:lombok')
 
