--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ dependencies {
 
     annotationProcessor ('org.projectlombok:lombok')
 
+    testCompile('junit:junit')
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('org.projectlombok:lombok')
 
