--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-configuration-processor')
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('com.h2database:h2:1.4.199')
+    implementation('mysql:mysql-connector-java')
     implementation('org.springframework.session:spring-session-jdbc')
     implementation('org.springframework.boot:spring-boot-devtools')
     implementation('org.json:json:20180813')
