--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ cache:
 script: "./gradlew clean build"
 
 before_deploy:
-  - zip -r recordary_pc
+  - zip -r recordary_pc *
   - mkdir -p deploy
   - mv recordary_pc.zip deploy/recordary_pc.zip
 
@@ -34,6 +34,9 @@ deploy:
     acl: private # zip 파일 접근을 private로
     local_dir: deploy # before_deploy에서 생성한 디렉토리
     wait-until-deployed: true
+    on:
+      repo: wsb0722/recordary_pc
+      branch: master
 
   - provider: codedeploy
     access_key_id: $AWS_ACCESS_KEY # Travis repo settings에 설정된 값
@@ -45,6 +48,9 @@ deploy:
     deployment_group: recordary-springboot-webservice-group # 웹 콘솔에서 등록한 CodeDeploy 배포 그룹
     region: ap-northeast-2
     wait-until-deployed: true
+    on:
+      repo: wsb0722/recordary_pc
+      branch: master
 
 # CI 실행 완료 시 메일로 알람
 notifications:
