--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,6 @@ def webappDir = "$projectDir/frontend"
 
 processResources {
     dependsOn("npmBuild")
-    dependsOn("copyWebApp")
 }
 
 task appNpmInstall(type: Exec) {
@@ -79,3 +78,5 @@ task copyWebApp(type: Copy) {
     from 'frontend/build'
     into 'build/resources/main/static/.'
 }
+
+compileJava.dependsOn("copyWebApp")
