--- a/build.gradle
+++ b/build.gradle
@@ -60,23 +60,50 @@ dependencies {
 def webappDir = "$projectDir/frontend"
 
 processResources {
-    dependsOn("npmBuild")
+    dependsOn("frontCopy")
 }
 
-task appNpmInstall(type: Exec) {
-    workingDir("${webappDir}")
-    commandLine "npm", "install"
+task frontBuild {
+    doLast {
+        exec {
+            workingDir "${webappDir}"
+            commandLine "npm", "install"
+        }
+        exec {
+            workingDir "${webappDir}"
+            commandLine "npm", "run-script", "build"
+        }
+    }
 }
 
-task npmBuild(type: NpmTask) {
-    dependsOn("appNpmInstall")
-    workingDir = file("${webappDir}")
-    args = ['run-script', 'build']
+task frontCopy {
+    dependsOn("frontBuild")
+    doLast {
+        exec {
+            workingDir "${projectDir}/build"
+            commandLine "mkdir", "resources", "resources/main", "resources/main/static"
+        }
+        exec {
+            workingDir "${projectDir}"
+            commandLine "cp", "-r", "frontend/build/", "build/resources/main/static/"
+        }
+    }
 }
 
-task copyWebApp(type: Copy) {
-    from 'frontend/build'
-    into 'build/resources/main/static/.'
-}
-
-compileJava.dependsOn("copyWebApp")
+//task appNpmInstall(type: Exec) {
+//    workingDir("${webappDir}")
+//    commandLine "npm", "install"
+//}
+//
+//task npmBuild(type: NpmTask) {
+//    dependsOn("appNpmInstall")
+//    workingDir = file("${webappDir}")
+//    args = ['run-script', 'build']
+//}
+//
+//task copyWebApp(type: Copy) {
+//    from 'frontend/build'
+//    into 'build/resources/main/static/.'
+//}
+//
+//compileJava.dependsOn("copyWebApp")
