--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,13 @@ before_install:
 script: "./gradlew -x clean build"
 
 before_deploy:
-  - zip -r recordary_pc *
-  - mkdir -p deploy
-  - mv recordary_pc.zip deploy/recordary_pc.zip
+  - mkdir -p before-deploy
+  - cp scripts/*.sh before-deploy/
+  - cp appspec.yml before-deploy/
+  - cp build/libs/*.jar before-deploy/
+  - cd before-deploy && zip -r before-deploy *
+  - cd ../ && mkdir -p deploy
+  - mv before-deploy/before-deploy.zip deploy/recordary_pc.zip
 
 deploy:
   - provider: s3
