--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    maven { url 'https://repo.spring.io/libs-milestone'}
 }
 
 dependencies {
@@ -43,6 +44,7 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-devtools')
     implementation('org.json:json:20180813')
     implementation('joda-time:joda-time:2.2')
+    implementation('org.springframework.cloud:spring-cloud-starter-aws')
 
     annotationProcessor ('org.projectlombok:lombok')
     annotationProcessor ('org.springframework.boot:spring-boot-configuration-processor')
@@ -55,6 +57,12 @@ dependencies {
 
     testAnnotationProcessor ('org.projectlombok:lombok')
     testAnnotationProcessor ('org.springframework.boot:spring-boot-configuration-processor')
+}
+
+dependencyManagement {
+    imports {
+        mavenBom 'org.springframework.cloud:spring-cloud-aws:2.2.1.RELEASE'
+    }
 }
 
 def webappDir = "$projectDir/frontend"
