--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,7 +36,7 @@
   },
   "scripts": {
     "start": "cross-env NODE_PATH=src react-scripts start",
-    "build": "cross-env CI=true NODE_PATH=src react-scripts build",
+    "build": "set \\\"CI=false\\\" && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
