--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,6 +19,7 @@ cloud:
       bucket: recordary-springboot-upload
     region:
       static: ap-northeast-2
+      auto: false
     stack:
       auto: false
     credentials:
