--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,35 +8,35 @@
     "@date-io/dayjs": "^1.3.13",
     "@date-io/luxon": "^1.3.13",
     "@date-io/moment": "^1.3.13",
-    "@material-ui/core": "^4.9.5",
+    "@material-ui/core": "^4.9.9",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.45",
+    "@material-ui/lab": "^4.0.0-alpha.48",
     "@material-ui/pickers": "^3.2.10",
-    "@material-ui/styles": "^4.8.2",
+    "@material-ui/styles": "^4.9.6",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "cross-env": "^7.0.2",
-    "date-fns": "^2.11.0",
-    "immer": "^6.0.1",
-    "material-ui-popup-state": "^1.5.3",
+    "date-fns": "^2.11.1",
+    "immer": "^6.0.3",
+    "material-ui-popup-state": "^1.5.4",
     "moment": "^2.24.0",
-    "react": "^16.13.0",
+    "react": "^16.13.1",
     "react-color": "^2.18.0",
-    "react-dom": "^16.13.0",
+    "react-dom": "^16.13.1",
     "react-file-picker": "0.0.6",
-    "react-image-crop": "^8.5.0",
+    "react-image-crop": "^8.6.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.0",
+    "react-scripts": "^3.4.1",
     "redux": "^4.0.5",
-    "styled-components": "^5.0.1",
+    "styled-components": "^5.1.0",
     "use-immer": "^0.3.5"
   },
   "scripts": {
     "start": "cross-env NODE_PATH=src react-scripts start",
-    "build": "cross-env CI=true NODE_PATH=src react-scripts build",
+    "build": "cross-env NODE_PATH=src react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
