--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,10 +1,14 @@
-# test
 spring:
-  profiles:
-    active: local
 
-# local
----
-spring:
-  profiles: local
   jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+
+  h2:
+    console:
+      enabled: true
+
+  session:
+    store-type: jdbc
