--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,6 @@ branches:
     - master
     - try-ci
 
-env:
-  - TRAVIS_NODE_VERSION="lts/*"
-
 # Travis CI 서버의 Home
 cache:
   directories:
@@ -23,6 +20,8 @@ before_install:
 script: "./gradlew -x clean build"
 
 before_deploy:
+  - rm -rf frontend/node_modules
+  - rm -rf frontend/build
   - mkdir -p before-deploy
   - cp scripts/*.sh before-deploy/
   - cp appspec.yml before-deploy/
@@ -41,23 +40,6 @@ deploy:
     acl: private # zip 파일 접근을 private로
     local_dir: deploy # before_deploy에서 생성한 디렉토리
     wait-until-deployed: true
-    on:
-      repo: wsb0722/recordary_pc
-      branch: master
-
-  - provider: codedeploy
-    access_key_id: $AWS_ACCESS_KEY # Travis repo settings에 설정된 값
-    secret_access_key: $AWS_SECRET_KEY # Travis repo settings에 설정된 값
-    bucket: recordary-springboot-build #s3 버킷
-    key: recordary_pc.zip # 빌드파일을 압축해서 전달
-    bundle_type: zip
-    application: recordary-springboot-webservice # 웹 콘솔에서 등록한 CodeDeploy 애플리케이션
-    deployment_group: recordary-springboot-webservice-group # 웹 콘솔에서 등록한 CodeDeploy 배포 그룹
-    region: ap-northeast-2
-    wait-until-deployed: true
-    on:
-      repo: wsb0722/recordary_pc
-      branch: master
 
 # CI 실행 완료 시 메일로 알람
 notifications:
