--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,17 @@ deploy:
     local_dir: deploy # before_deploy에서 생성한 디렉토리
     wait-until-deployed: true
 
+  - provider: codedeploy
+    access_key_id: $AWS_ACCESS_KEY # Travis repo settings에 설정된 값
+    secret_access_key: $AWS_SECRET_KEY # Travis repo settings에 설정된 값
+    bucket: recordary-springboot-build #s3 버킷
+    key: recordary_pc.zip # 빌드파일을 압축해서 전달
+    bundle_type: zip
+    application: recordary-springboot-webservice # 웹 콘솔에서 등록한 CodeDeploy 애플리케이션
+    deployment_group: recordary-springboot-webservice-group # 웹 콘솔에서 등록한 CodeDeploy 배포 그룹
+    region: ap-northeast-2
+    wait-until-deployed: true
+
 # CI 실행 완료 시 메일로 알람
 notifications:
   email:
