--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-devtools')
     implementation('org.json:json:20180813')
     implementation('joda-time:joda-time:2.2')
-    implementation('org.springframework.cloud:spring-cloud-starter-aws')
+    implementation('org.springframework.cloud:spring-cloud-starter-aws:2.2.1.RELEASE')
 
     annotationProcessor ('org.projectlombok:lombok')
     annotationProcessor ('org.springframework.boot:spring-boot-configuration-processor')
@@ -61,12 +61,6 @@ dependencies {
 
     testAnnotationProcessor ('org.projectlombok:lombok')
     testAnnotationProcessor ('org.springframework.boot:spring-boot-configuration-processor')
-}
-
-dependencyManagement {
-    imports {
-        mavenBom 'org.springframework.cloud:spring-cloud-aws:2.2.1.RELEASE'
-    }
 }
 
 def webappDir = "$projectDir/frontend"
