--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ repositories {
 
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
+    implementation('org.springframework.boot:spring-boot-starter-websocket')
     implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
     implementation('org.springframework.boot:spring-boot-starter-jdbc')
     implementation('org.projectlombok:lombok')
@@ -49,6 +50,9 @@ dependencies {
     implementation('org.json:json:20180813')
     implementation('joda-time:joda-time:2.2')
     implementation('org.springframework.cloud:spring-cloud-starter-aws:2.2.1.RELEASE')
+    implementation('org.springframework.cloud:spring-cloud-aws:2.2.1.RELEASE')
+    implementation('com.amazonaws:aws-java-sdk-s3')
+    implementation('commons-fileupload:commons-fileupload:1.4')
 
     annotationProcessor ('org.projectlombok:lombok')
     annotationProcessor ('org.springframework.boot:spring-boot-configuration-processor')
