--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,10 @@ repositories {
     jcenter()
 }
 
+test {
+    useJUnitPlatform()
+}
+
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
     implementation('org.springframework.boot:spring-boot-starter-websocket')
@@ -57,14 +61,20 @@ dependencies {
     annotationProcessor ('org.projectlombok:lombok')
     annotationProcessor ('org.springframework.boot:spring-boot-configuration-processor')
 
-    testImplementation('junit:junit')
+    testImplementation('org.junit.jupiter:junit-jupiter-api:5.2.0')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     testImplementation('org.projectlombok:lombok')
     testImplementation('org.springframework.boot:spring-boot-configuration-processor')
     testImplementation('org.hamcrest:hamcrest:2.1')
+    testImplementation('io.findify:s3mock_2.12:0.2.5')
 
     testAnnotationProcessor ('org.projectlombok:lombok')
     testAnnotationProcessor ('org.springframework.boot:spring-boot-configuration-processor')
+
+    testCompileOnly ('junit:junit:4.12')
+
+    testRuntimeOnly ('org.junit.jupiter:junit-jupiter-engine:5.2.0')
+    testRuntimeOnly ('org.junit.vintage:junit-vintage-engine:5.2.0')
 }
 
 def webappDir = "$projectDir/frontend"
