--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,11 @@ spring:
   thymeleaf:
     prefix: classpath:static/
 
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 128MB
+
 cloud:
   aws:
     s3:
