--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,12 @@ spring:
       max-file-size: 10MB
       max-request-size: 128MB
 
+server:
+  error:
+    include-exception: true
+    whitelabel:
+      enabled: false
+
 cloud:
   aws:
     s3:
