--- a/build.gradle
+++ b/build.gradle
@@ -58,7 +58,7 @@ dependencies {
     implementation('com.amazonaws:aws-java-sdk:1.2.1')
     implementation('com.amazonaws:aws-java-sdk-s3')
     implementation('commons-fileupload:commons-fileupload:1.4')
-    implementation('org.apache.commons:commons-io')
+    implementation('org.apache.commons:commons-io:1.3.2')
 
     annotationProcessor ('org.projectlombok:lombok')
     annotationProcessor ('org.springframework.boot:spring-boot-configuration-processor')
